# pyproject.toml
# Python project configuration.

[build-system]
requires = ["poetry-core==1.2.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lego-certbot"
version = "0.1.0"
description = "Lego DNS-01 exec provider script for Certbot authenticator plugins"
authors = ["Callum Dickinson <callum.dickinson.nz@gmail.com>"]
readme = "README.md"
packages = [{include = "lego_certbot.py"}]

[tool.poetry.scripts]
lego-certbot = "lego_certbot:main"

[tool.poetry.dependencies]
python = "^3.8"
certbot = "*"

[tool.poetry.group.dev.dependencies]
black = "22.10.0"
flake8 = "5.0.4"
isort = "5.10.1"
mypy = "0.990"

[tool.poetry.group.metaname]
optional = true

[tool.poetry.group.metaname.dependencies]
certbot-dns-metaname = {url = "https://github.com/Callum027/certbot-dns-metaname/archive/refs/tags/v0.0.3.zip"}

[tool.poetry.extras]
metaname = ["certbot-dns-metaname"]

[tool.black]
line_length = 100

[tool.isort]
profile = "black"
line_length = 100
lines_between_types = 1
remove_redundant_aliases = true

[tool.mypy]
python_version = ["3.8", "3.9", "3.10"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
